--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 clap = { version = "4.4.10", features = ["derive"] }
 fancy-regex = "0.12.0"
 lazy_static = "1.4.0"
+rayon = "1.8.0"
