--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 clap = { version = "4.4.10", features = ["derive"] }
 fancy-regex = "0.12.0"
 lazy_static = "1.4.0"
+num-integer = "0.1.45"
 rayon = "1.8.0"
 toml = "0.8.8"
