--- a/src/regex.toml
+++ b/src/regex.toml
@@ -10,3 +10,5 @@ map_node = "\\b[A-Z]{3}\\b"
 s = "S"
 galaxy = "#"
 broken_window = "#+"
+alphanumeric = "\\w+"
+trench = "([UDRL]) (\\d+) \(\\#([a-f0-9]{5})([0-4])\\)"
