completed day 19; New favorite day so far.

--- a/src/regex.toml
+++ b/src/regex.toml
@@ -1,4 +1,8 @@
 [patterns]
+2318_workflow = "(?<name>[a-z]+)\\{(?<xmas>([xmas][<>]\\d+:([a-z]+|[AR]),)+)(?<other>[AR]|[a-z]+)\\}"
+2318_xmas = "(?<xmas>[xmas])(?<cmp>[<>])(?<val>\\d+):(?<out>[a-z]+|[AR])"
+2318_part_ratingsv0 = "x=(?<x>\\d+),m=(?<m>\\d+),a=(?<a>\\d+),s=(?<s>\\d+)"
+2318_part_ratings = "((?<xmas>[xmas])=(?<val>\\d+))+?"
 num_word_f = "(one|two|three|four|five|six|seven|eight|nine|\\d)"
 num_word_r = "(eno|owt|eerht|ruof|evif|xis|neves|thgie|enin|\\d)"
 game = "(?<=Game )\\d+"
@@ -11,4 +15,4 @@ s = "S"
 galaxy = "#"
 broken_window = "#+"
 alphanumeric = "\\w+"
-trench = "([UDRL]) (\\d+) \(\\#([a-f0-9]{5})([0-4])\\)"
+trench = "^([UDRL]?) (\\d+) \\(#([a-f0-9]{5})([0-4])\\)"
