--- a/src/regex.toml
+++ b/src/regex.toml
@@ -1,8 +1,10 @@
 [patterns]
-2318_workflow = "(?<name>[a-z]+)\\{(?<xmas>([xmas][<>]\\d+:([a-z]+|[AR]),)+)(?<other>[AR]|[a-z]+)\\}"
-2318_xmas = "(?<xmas>[xmas])(?<cmp>[<>])(?<val>\\d+):(?<out>[a-z]+|[AR])"
-2318_part_ratingsv0 = "x=(?<x>\\d+),m=(?<m>\\d+),a=(?<a>\\d+),s=(?<s>\\d+)"
-2318_part_ratings = "((?<xmas>[xmas])=(?<val>\\d+))+?"
+2320_machines = "((?<type>[%|&])(?<name>[a-z]{2}))? -> (?<outputs>(([a-z]{2})(,\\s)?)+)"
+2320_outputs = "[a-z]{2}"
+2319_workflow = "(?<name>[a-z]+)\\{(?<xmas>([xmas][<>]\\d+:([a-z]+|[AR]),)+)(?<other>[AR]|[a-z]+)\\}"
+2319_xmas = "(?<xmas>[xmas])(?<cmp>[<>])(?<val>\\d+):(?<out>[a-z]+|[AR])"
+2319_part_ratingsv0 = "x=(?<x>\\d+),m=(?<m>\\d+),a=(?<a>\\d+),s=(?<s>\\d+)"
+2319_part_ratings = "((?<xmas>[xmas])=(?<val>\\d+))+?"
 num_word_f = "(one|two|three|four|five|six|seven|eight|nine|\\d)"
 num_word_r = "(eno|owt|eerht|ruof|evif|xis|neves|thgie|enin|\\d)"
 game = "(?<=Game )\\d+"
